# aurigma

./: .travis.yml  CMakeLists.txt  README.md
src/: Color.cpp  Color.h  Graphics.cpp  Graphics.h  Point.h  Size.h  TiffImage.cpp  TiffImage.h  main.cpp
